--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>recalt</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <table class="table">
@@ -14,25 +15,18 @@
      <th scope="col">_id</th>
      <th scope="col">_titulo</th>
      <th scope="col">_texto</th>
-
-
      </tr>
     </thead>
     <tbody>
-    <%lugareslist.forEach(lugares =>{%>
+        <%lugareslist.forEach(lugaress =>{%>
         <tr>
-       <th scope="row"><%lugares.id%></th>
-        </td><%lugares._id%> </td>
-       <td><%=lugares. titulo%></td>
-       <td><%=lugares.texto %></td>
-       <%})%>
-
-
+            <th scope="row"><%lugaress.id%></th>
+            <td><%lugaress._id%></td>
+            <td><%=lugaress.titulo%></td>
+            <td><%=lugaress.texto%></td>
+            <%})%>
         </tr>
     </tbody>    
     </table>
-
-
-
 </body>
 </html>
