--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,24 +6,162 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>recalt</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
+
+    <style>
+      :root{
+    --dark: #2b2d42;
+    --light: #adb5bd;
+    --border: #dee2e6;
+    --border-btn: #edf2f4;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body{
+    color: #2b2d42;
+}
+
+a {
+    text-decoration: none;
+    font-family: 'PT Sans', sans-serif;
+}
+.container{
+    max-width: 1024px;
+    margin: auto;
+}
+
+.nav-brand{
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.d-flex{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.justify-between{
+    justify-content: space-between;
+}
+
+.text-center{
+    text-align: center;
+}
+
+.border-shadow{
+    border: 1px solid var(--border-btn);
+    box-shadow: 1px 3px 10px #e9ecef;
+}
+
+.text-dark{
+    color: var(--dark);
+}
+
+.inline{
+    display: inline-block;
+}
+
+.text-light{
+    color: var(--light);
+}
+
+.text-gradient{
+    background: linear-gradient(to right, #8e2de2, #4a00e0);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#header nav{
+    background-color: #06d6a0;
+    padding: 1em 0;
+    width: 100%;
+}
+
+#site-main{
+    margin-top: 6em;
+    font-family: 'Barlow', sans-serif;
+}
+
+#site-main .container .box-nav > a{
+    font-size: 1em;
+    padding: .5em 1em;
+}
+
+#site-main .container form{
+    margin: 2em 0;
+}
+
+table{
+    border-spacing: 0px;
+    width: 100%;
+}
+
+.table td, .table th{
+    padding: .75em;
+    vertical-align: top;
+    text-align: justify;
+    border-top: 1px solid var(--border);
+    font-size: 19px;
+}
+
+.table td > a.btn{
+    padding: .3em 1em;
+    font-size: 1.1em;
+    margin: 0 .2em;
+}
+
+.table tr:hover{
+    background-color:#b4b210 ;
+}
+
+.table tr:hover td > a{
+    box-shadow: none;
+}
+
+.table .thead-dark th{
+    color: rgb(243, 11, 11);
+    background-color: var(--dark) ;
+    font-size: 20px;
+}
+
+    </style>
+
+
+
     <table class="table">
-    <thead>
+    <thead class="thead-dark">
      <tr>
-     <th scope="col">id</th>
-     <th scope="col">_id</th>
-     <th scope="col">_titulo</th>
-     <th scope="col">_texto</th>
+     <th scope="col">ID</th>
+     <th scope="col">_ID</th>
+     <th scope="col">_Titulo</th>
+     <th scope="col">_Texto</th>
+     <th scope="col">Action</th>
      </tr>
     </thead>
     <tbody>
         <%lugareslist.forEach(lugaress =>{%>
         <tr>
-            <th scope="row"><%lugaress.id%></th>
-            <td><%lugaress._id%></td>
+            <th scope="row"><%=lugaress.id%></th>
+            <td><%=lugaress._id%></td>
             <td><%=lugaress.titulo%></td>
             <td><%=lugaress.texto%></td>
+            <td>
+                <a href="/atualizar" class="btn border-shadow update">
+                    <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
+                </a>
+                <a class="btn border-shadow delete" >
+                    <span class="text-gradient"><i class="fas fa-times"></i></span>
+                </a>
+            </td>
             <%})%>
         </tr>
     </tbody>    
